manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "theidserver-82b0"
    labels:
        app: "theidserver-82b0"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: theidserverc91f-theidserver-82b0.d50cd44e67024120901a.switzerlandnorth.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "theidserver-82b0"
                servicePort: 80
